@@ -59,7 +59,6 @@ public class Genetic extends BaseAlgorithm {
         List<List<Integer>> newRoutes = greedySplit(flatList, instance);
         mutated.setRoutes(newRoutes);
         mutated.calculateCost(instance);
-//        mutated.calculateFitness();
         return mutated;
     }
 
@@ -79,16 +78,16 @@ public class Genetic extends BaseAlgorithm {
         List<Integer> childSeq = new ArrayList<>(Collections.nCopies(size, -1));
         Set<Integer> used = new HashSet<>();
 
-        // Copy segment from parent1
+        // copy segment from parent1
         for (int i = start; i <= end; i++) {
             childSeq.set(i, p1.get(i));
             used.add(p1.get(i));
         }
 
-        // Fill remaining positions from parent2
+        // fill remaining positions from parent2
         int idx = (end + 1) % size;
         for (int i = 0; i < size; i++) {
-            int gene = p2.get((end + 1 + i) % size);
+            int gene = p2.get((i));
             if (!used.contains(gene)) {
                 childSeq.set(idx, gene);
                 used.add(gene);
@@ -100,7 +99,6 @@ public class Genetic extends BaseAlgorithm {
         Solution child = new Solution(parent1);
         child.setRoutes(newRoutes);
         child.calculateCost(instance);
-//        child.calculateFitness();
         return child;
     }
 
@@ -126,11 +124,11 @@ public class Genetic extends BaseAlgorithm {
         }
 
         currentGeneration.sort(Comparator.comparingInt(Solution::getCost));
-        Solution bestSolution = currentGeneration.get(0);
+        Solution bestSolution = currentGeneration.getFirst();
 
         double best = currentGeneration.getFirst().getCost();
         double worst = currentGeneration.getLast().getCost();
-        double avg = currentGeneration.stream().mapToDouble(Solution::getCost).average().getAsDouble();
+        double avg = currentGeneration.stream().mapToDouble(Solution::getCost).average().orElse(Double.NaN);
 
 
         if (evalWriter != null && configRunnerType.equals(ConfigRunnerType.EVALUATION_FILE)) {
@@ -140,8 +138,6 @@ public class Genetic extends BaseAlgorithm {
                 e.printStackTrace();
             }
         }
-//        int counterBestSolutionPlateau = 0;
-
 
         for (int generation = 0; generation < maxGenerations; generation++) {
             int elitismCount = (int) Math.round(elitismFactor * populationSize);
@@ -149,8 +145,13 @@ public class Genetic extends BaseAlgorithm {
             Set<Solution> uniqueSolutions = new HashSet<>(newGeneration);
 
             while (newGeneration.size() < populationSize) {
-                Solution parent1 = selectParent(currentGeneration);
-                Solution parent2 = selectParent(currentGeneration);
+                Solution parent1;
+                Solution parent2;
+                do {
+                    parent1 = selectParent(currentGeneration);
+                    parent2 = selectParent(currentGeneration);
+                } while (parent1.equals(parent2));
+
 
                 Solution child;
                 if (Math.random() < crossoverFactor) {
@@ -168,29 +169,17 @@ public class Genetic extends BaseAlgorithm {
                 }
             }
 
-//            // --- Inject Random Diversity ---
-//            if (generation % 2000 == 0) {
-//                for (int i = 0; i < populationSize / 10; i++) {
-//                    Random randomAlg = new Random(instance);
-//                    Solution randomSolution = randomAlg.runAlgorithm();
-//                    newGeneration.add(randomSolution);
-//                }
-//            }
 
             newGeneration.sort(Comparator.comparingInt(Solution::getCost));
 
             if (newGeneration.getFirst().getCost() < bestSolution.getCost())
                 bestSolution = newGeneration.getFirst();
-//                counterBestSolutionPlateau = 0;
-//            } else {
-//              counterBestSolutionPlateau++;
-//            }
 
             if (evalWriter != null && configRunnerType.equals(ConfigRunnerType.EVALUATION_FILE)) {
                 try {
                     best = newGeneration.getFirst().getCost();
                     worst = newGeneration.getLast().getCost();
-                    avg = newGeneration.stream().mapToDouble(Solution::getCost).average().getAsDouble();
+                    avg = newGeneration.stream().mapToDouble(Solution::getCost).average().orElse(Double.NaN);
                     Logger.logGeneration(evalWriter, generation + 1, best, avg, worst);
                 } catch (IOException e) {
                     e.printStackTrace();
@@ -198,12 +187,6 @@ public class Genetic extends BaseAlgorithm {
             }
 
             currentGeneration = newGeneration;
-
-//            if (counterBestSolutionPlateau > 60) {
-//                System.out.println("No improvement for " + counterBestSolutionPlateau + " generations");
-//                bestSolution.printCost();
-//            }
-//
             System.out.println("Generation: " + generation + " Best Cost: " + bestSolution.getCost());
 
         }
